# Master-Thesis-AI-Driven-Project-Risk-Prediction-Optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.py
docs/: API.md  ARCHITECTURE.md  architecture.md
examples/: demo.py
src/: __init__.py  framework.py
src/data/: __init__.py  data_loader.py  lessons_learned_parser.py  preprocessor.py
src/explainability/: __init__.py  explainer.py
src/models/: __init__.py  delay_predictor.py  risk_predictor.py
src/risk_analyzer/: cli.py
src/risk_analyzer/pipelines/: generate_synthetic.py  train_model.py
src/risk_analyzer/utils/: reporting.py
src/utils/: __init__.py  logger.py  visualization.py
tests/: test_framework.py
